[Withdraw][New][Fix]
[ Withdraw ]
・データ 型の dfp (10進浮動小数点) の対応を取りやめ
・データ型を dfp型 に変換する関数の削除
  -> dfp(文字列)
[ New ]
・データ型に 長整数 (Long) の追加
・long(数値)
  -> データ型を 長整数 に変換する関数の追加
・プラグイン機能により関数の追加
* str2Half(文字列)
  -> 全角英数字を半角英数字に変換する
* str2Double(文字列)
-> 半角英数字を全角英数字に変換する
[ Fix ]
・（内部変更）リファクタリング